# cozmo

./: .env.template  .gitignore  CHALLENGE_SYSTEM_SUMMARY.md  ENHANCED_TRIVIA_CONSOLIDATION.md  FIXES_SUMMARY.md  REACTION_TROUBLESHOOTING.md  README.md  TRIVIA_FIXES_SUMMARY.md  config.py  debug_espn.py  debug_roster_structure.py  debug_team_matching.py  find_galaxy_id.py  health_server.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_bot_commands.py  test_bot_integration.py  test_challenge_integration.py  test_hybrid_api.py  test_simple_integration.py  trivia_questions.py  verify_bot_setup.py
api/: __init__.py  espn_api.py  espn_api_old.py  news_api.py  sports_api.py
cogs/: __init__.py  achievement_commands.py  enhanced_trivia.py  leaderboard_commands.py  matchday.py  news.py  news.py.disabled  stats.py  trivia.py
config/: production.env.template
data/: trivia.db-shm  trivia_questions.py
docs/: ACHIEVEMENT_SYSTEM_SUMMARY.md  CLEANUP_SUMMARY.md  DATABASE_INFRASTRUCTURE.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  ENHANCED_ERROR_HANDLING_SUMMARY.md  ENHANCED_TRIVIA_COMMAND_REFERENCE.md  ENHANCED_TRIVIA_USER_GUIDE.md  ERROR_HANDLING_SUMMARY.md  FEATURES_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_TESTING_REPORT.md  MIGRATION_SUMMARY.md  SECURITY_GUIDELINES.md  SETUP_GUIDE.md  index.md
scripts/: backup_restore.py  find_galaxy_id.py  health_check.py  migrate_database.py  optimize_database.py
tests/: README.md  run_all_tests.py  team_id_status_report.py  test_achievement_basic.py  (+38 more)
(+26 files in other folders)
