[project]
name = "cozmo"
version = "0.1.0"
description = "A Discord bot for LA Galaxy fans providing match info, stats, news, and trivia"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.3.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "feedparser>=6.0.0",
    "pytz>=2023.3",
    "aiosqlite>=0.19.0",
]
